--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rahul Choudhary - Full Stack & AI Automation Developer</title>
-    <meta name="description" content="Full Stack Developer & N8N AI Agent Developer with 5+ years of experience in building scalable applications and intelligent automation workflows.">
+    <meta
+      name="description"
+      content="Full Stack Developer & N8N AI Agent Developer with 5+ years of experience in building scalable applications and intelligent automation workflows."
+    />
   </head>
   <body>
     <div id="root"></div>
